# OpenSpec-mcp-x

./: LICENSE  README.md
openspec-mcp/: CHANGELOG.md  NPX-SETUP-GUIDE.md  README.md  manifest.json  package.json  publish.sh  pyproject.toml  update.sh
openspec-mcp/src/openspec_mcp/: __init__.py  server.py
